--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{{ page.title }} - base Jekyll</title>
+    <title>{{ page.title }} - Jekyll Blog</title>
+    <link href="https://fonts.googleapis.com/css?family=Slabo+13px" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/styles.css">
 </head>
 <body>
-    {{ content }}
+    {% include nav-bar.html %}
+    {% include header.html %}
+    <div class="container">
+        {{ content }}
+    </div>
+    {% include footer.html %}
 </body>
 </html>
