--- a/resources/sass/styles.scss
+++ b/resources/sass/styles.scss
@@ -1,1 +1,16 @@
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    box-sizing: border-box;
+}
 
+html {
+    font-family: 'Slabo 13px';
+    font-size: 12px;
+}
+
+@import 'grid/grid';
+@import 'header/header';
+@import 'footer/footer';
+@import 'nav-bar/nav-bar';
