Work in progress, foo content

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <section class="footer">
     <div class="container">
-        Footer 123
+        Footer of page, copywright {{ 'now' | date: "%Y" }}
     </div>
 </section>
