--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,9 +11,11 @@
 <body>
     {% include nav-bar.html %}
     {% include header.html %}
-    <div class="container">
-        {{ content }}
-    </div>
+	<main class="main">
+	    <div class="container">
+	        {{ content }}
+	    </div>
+	</main>
     {% include footer.html %}
 </body>
 </html>
