--- a/resources/sass/header/header.scss
+++ b/resources/sass/header/header.scss
@@ -1,6 +1,8 @@
 .header {
+	background-color: #fff;
     &__title {
+		text-align: center;
         font-size: 2rem;
-        padding: 3rem 0;
+        padding: 6rem 0;
     }
 }
