--- a/resources/sass/nav-bar/nav-bar.scss
+++ b/resources/sass/nav-bar/nav-bar.scss
@@ -1,9 +1,8 @@
 .nav-bar {
-    background-color: #1d1d1d;
     color: #fff;
-    padding: 20px 0;
+    padding: 2rem 0;
     &__logo, &__nav {
-        font-size: 2rem;
+        font-size: 1.6rem;
     }
     
     &__nav {
@@ -18,7 +17,7 @@
         a {
             text-decoration: none;
             color: #fff;
-            &:hover {
+            &:hover, &.active {
                 text-decoration: line-through;
             }
         }
